# $Id$

2005.12-08    particle
	* move charset/ directory to src/charset/

2005.12.07    particle
	* move imcc/ directory to compilers/imcc/

2005.12.06    particle
	* moved util/ directory to tools/util/
	* removed imcc/examples/ directory
	* moved ast/ directory to compilers/ast/

2005.12.05    particle
	* moved imcc/docs/ directory to docs/imcc/
	* moved build_tools/ directory to tools/build/
	* modified MANIFEST, MANIFEST.generated, and MANIFEST.SKIP

2005.12.04    leo
	* Released 0.4.0
	* See NEWS for changes

2005.11.06    leo
	* Released 0.3.1
	* See NEWS for changes

2005.10.01    leo
	* Released 0.3.0
	* See NEWS for changes

2005.08.05    leo
	* Released 0.2.3
	* See NEWS for changes

2005.07.03    leo
	* Released 0.2.2
	* See NEWS for changes

2005.06.04    leo
	* Released 0.2.1
	* allow short names for object attributes
	* string encoding and charset can now be set independently
	* experimental mmap IO layer for slurping files
	* enable compile opcode support for compilers written in PASM/PIR
	* improved HLL support with .HLL and n_operators pragmas
	* simplified hash code
	* more strength reduce optimizations
	* distinct debug and trace flag settings
	* glob support in PGE
	* new character classification opcodes and interfaces
	* numerous bug fixes and enhancements

2005-05-08    leo
	* Released 0.2.0
	* parrot repository is now under subversion
	* MMD (Multi Method Dispatch) enhanced
	* new unary and infix opcodes that return new result PMCs
	* dynamic scalar PMCs inherit now almost all from Parrot core PMCs
	* more unification of PMCs and ParrotObjects
	* tailcalls for functions and methods
	* PGE (Parrot Grammar Engine) reworked
	* Pugs creates Parrot code and Pugs is a registered compiler now
	* new languages/lisp
	* the usual bug fixes and improvements

2005-03-06    leo
        * Released 0.1.2
	* big rewrite of string code, not yet finished but ...
	* partial implementation of a generational garbage collector