@@ -4,7 +4,7 @@ $Id$
 
 =head1 NAME
 
-encodings/utf16.c - UTF-16 encoding
+src/encodings/utf16.c - UTF-16 encoding
 
 =head1 DESCRIPTION
 
@@ -373,8 +373,8 @@ Parrot_encoding_utf16_init(Interp *interpreter)
 
 =head1 SEE ALSO
 
-F<encodings/fixed_8.c>,
-F<encodings/utf8.c>,
+F<src/encodings/fixed_8.c>,
+F<src/encodings/utf8.c>,
 F<src/string.c>,
 F<include/parrot/string.h>,
 F<docs/string.pod>.
